# Python-for-Employees

./: Backup Files.py  Convert Currency.py  Data Entry Automation.py  Email Automation.py  Employee Onboarding.py  Expense Tracking.py  File Management.py  Generate QR Code.py  LICENSE  Meeting Scheduler.py  PDF Merger.py  Performance Metrics.py  README.md  Report Generation.py  Slack Notifications.py  Social Media Posting.py  Task Management.py  Text Translation.py  Time Tracker.py  Weather Forecast.py  Web Scraping.py  Website Status Checker.py  automation_runner.py  pyproject.toml  requirements.txt
