[tool.poetry]
name  =  "python for employees"
version  =  "0.1.0"
description  =  ""
authors  =  ["Dumbo-programmer <rony.120285d2k@gmail.com>"]
license  =  "MIT"
readme  =  "README.md"

[tool.poetry.dependencies]
python = ">=3.12.6,<3.14"
absl-py = "2.1.0"
altgraph = "0.17.4"
astunparse = "1.6.3"
audioread = "3.0.1"
auto-py-to-exe = "2.44.1"
beautifulsoup4 = "4.12.3"
bottle = "0.13.1"
bottle-websocket = "0.2.9"
bs4 = "0.0.2"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
decorator = "5.1.1"
Eel = "0.17.0"
flatbuffers = "24.3.25"
future = "1.0.0"
gast = "0.6.0"
gevent = "24.2.1"
gevent-websocket = "0.10.1"
google-pasta = "0.2.0"
greenlet = "3.0.3"
grpcio = "1.66.1"
h5py = "3.11.0"
idna = "3.8"
joblib = "1.4.2"
keras = "3.5.0"
lazy_loader = "0.4"
libclang = "18.1.1"
librosa = "0.10.2.post1"
llvmlite = "0.43.0"
Markdown = "3.7"
markdown-it-py = "3.0.0"
MarkupSafe = "2.1.5"
mdurl = "0.1.2"
ml-dtypes = "0.4.0"
msgpack = "1.0.8"
namex = "0.0.8"
numba = "0.60.0"
numpy = "1.26.4"
opt-einsum = "3.3.0"
optree = "0.12.1"
packaging = "24.1"
pefile = "2024.8.26"
pillow = "10.4.0"
pip = "24.2"
platformdirs = "4.3.1"
pooch = "1.8.2"
protobuf = "4.25.4"
pycparser = "2.22"
Pygments = "2.18.0"
pyinstaller = "6.10.0"
pyinstaller-hooks-contrib = "2024.8"
pyparsing = "3.1.4"
pywin32-ctypes = "0.2.3"
requests = "2.32.3"
rich = "13.8.0"
scikit-learn = "1.5.1"
scipy = "1.14.1"
setuptools = "74.1.2"
six = "1.16.0"
soundfile = "0.12.1"
soupsieve = "2.6"
soxr = "0.5.0.post1"
tensorboard = "2.17.1"
tensorboard-data-server = "0.7.2"
tensorflow = "2.17.0"
tensorflow-intel = "2.17.0"
termcolor = "2.4.0"
threadpoolctl = "3.5.0"
typing_extensions = "4.12.2"
urllib3 = "2.2.2"
Werkzeug = "3.0.4"
wheel = "0.44.0"
whichcraft = "0.6.1"
wrapt = "1.16.0"


[build-system]
requires  =  ["poetry-core"]
build-backend  =  "poetry.core.masonry.api"
